--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^14.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "sucrase": "^3.20.3",
