--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -13,7 +14,10 @@
     "jsonwebtoken": "^8.5.1",
     "sucrase": "^3.20.3",
     "uuid": "^8.3.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "@sucrase/jest-plugin": "^2.2.0",
+    "jest": "^27.4.7",
+    "supertest": "^6.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
